# j-video-downloader

./: .dockerignore  Dockerfile  main.py  pyproject.toml
src/: main.py
src/auth/: auth.py
src/database/: database.py
src/models/: __init__.py  download_history.py
src/routes/: general.py  web.py
src/routes/direct-downloader/: dailymotion_direct.py  instagram_direct.py  tiktok_direct.py
src/routes/downloader/: __init__.py  bilibili.py  bitchute.py  buzzfeed.py  dailymotion.py  douyin.py  facebook.py  imdb.py  instagram.py  kwai.py  linkedin.py  ninegag.py  pinterest.py  reddit.py  rumble.py  snapchat.py  tiktok.py  tumblr.py  twitch.py  twitter.py
templates/: dashboard.html  welcome.html
